# rust-spiffe

./: Cargo.toml  LICENSE
example/: Cargo.toml
spiffe/: Cargo.toml  Makefile
spiffe/src/: lib.rs
spiffe/src/api/: mod.rs  workload_api.rs  workload_api_grpc.rs
spiffe/src/svid/: jwt.rs  mod.rs  x509.rs
spiffe/src/uri/: mod.rs
spiffe/src/workload/: jwt.rs  mod.rs  workload_api.proto  workload_api.rs  workload_api_grpc.rs  x509.rs
spiffe/tests/: intermediate.cert.pem  svid_test.rs  uri_test.rs  workload_test.rs
src/: errors.rs  lib.rs
src/svid/: mod.rs
src/uri/: mod.rs
tests/: leaf.cert.pem  svid_test.rs  uri_test.rs
