[package]
name = "spiffe"
version = "0.1.0"
authors = ["Sabree Blackmon <sabree@heavypackets.sh>"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
error-chain = "0.12.0"
hyper = "0.10.0"
protobuf = "~2.0"
grpcio = { git = "https://github.com/heavypackets/grpc-rs", version = "0.3", default-features = false, features = ["protobuf-codec"] }
futures = "^0.1.24"

[dev-dependencies]
assert_matches = "1.3"
